--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 <body>
   <header>
     <div class="logo">
-      <img src="assets/golden_stores_logo_2.png" alt="Golden Stores Logo" />
+      <img src="assets/goldenStoresLogo.png" alt="Golden Stores Logo" />
       <h1>Golden Stores LLC</h1>
     </div>
   </header>
 
-  <section class="hero">
-    <h2>Our Mission</h2>
-    <p>At Golden Stores LLC, we are committed to providing high-quality, gently used electronics at affordable prices. We believe in sustainability through reuse and are proud to give technology a second life while offering great value to our customers.</p>
-  </section>
-
-  <section id="stores" class="store-list">
+  <!-- Styled like the old 'Our Mission' section -->
+  <section id="stores" class="hero">
     <h2>Our Stores</h2>
-    <ul>
-      <li><a href="https://www.ebay.com/usr/your-ebay-store-name" target="_blank">eBay Store</a></li>
-      <!-- Future stores can be added here -->
-    </ul>
+    <div class="store-buttons">
+      <a class="store-button" href="https://www.ebay.com/usr/your-ebay-store-name" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/EBay_logo.svg" alt="eBay Logo" />
+        Visit Our eBay Store
+      </a>
+    </div>
+    <p class="mission-small">
+      At Golden Stores LLC, we are committed to providing high-quality, gently used electronics at affordable prices. We believe in sustainability through reuse and are proud to give technology a second life while offering great value to our customers.
+    </p>
   </section>
 
   <footer>
